# power-meter

./: .gitignore  CMakeLists.txt  README.md  arm_tools.txt  cmake_debug.sh  download_samd21_packages.sh
include/: common.h  power_logger.h  startup_samd21e17a.h
include/drivers/: gpio.h  spi.h
include/drivers/samd21e/: gclk.h  port.h  sercom_spi.h
include/drivers/samd21e17a/: gclk.h
include/interrupts/samd21e/: interrupts.h
include/interrupts/samd21e17a/: interrupts.h
include/startup/: startup_samd21e17a.h
linker/: samd21e17a_flash.ld  samd21e17a_linker.ld  samd21e17a_sram.ld
misc/: download_packages.sh  make_todo_list.py  todo_list.txt
samd21-core/: Microchip.SAMD21_DFP.sha1  OVERVIEW.md  package.content
samd21-core/samd21a/armcc/: system_samd21e17a.c  system_samd21g15a.c  system_samd21g16a.c  system_samd21j15a.c
samd21-core/samd21a/atdf/: ATSAMD21G16A.atdf  ATSAMD21G17A.atdf  ATSAMD21G18AU.atdf  ATSAMD21J15A.atdf  ATSAMD21J18A.atdf
samd21-core/samd21a/edc/: ATSAMD21G15A.PIC  ATSAMD21G17A.PIC  ATSAMD21G17AU.PIC  ATSAMD21J17A.PIC  ATSAMD21J18A.PIC
samd21-core/samd21a/gcc/: system_samd21e15a.c  system_samd21j17a.c
samd21-core/samd21a/iar/: system_samd21e18a.c  system_samd21g18au.c  system_samd21j15a.c  system_samd21j16a.c
samd21-core/samd21a/include/: samd21e18a.h  samd21g17au.h  samd21j16a.h  system_samd21e16a.h  system_samd21g16a.h
samd21-core/samd21a/svd/: ATSAMD21G15A.svd  ATSAMD21G16A.svd  ATSAMD21J15A.svd  ATSAMD21J16A.svd
samd21-core/samd21b/armcc/: system_samd21e15b.c  system_samd21e15bu.c  system_samd21e16b.c  system_samd21e16bu.c  system_samd21j15b.c  system_samd21j16b.c
samd21-core/samd21b/atdf/: ATSAMD21E15BU.atdf  ATSAMD21E16B.atdf  ATSAMD21G16B.atdf  ATSAMD21J16B.atdf
samd21-core/samd21b/edc/: ATSAMD21G16B.PIC  ATSAMD21J15B.PIC  ATSAMD21J16B.PIC
samd21-core/samd21b/gcc/: system_samd21e15bu.c
samd21-core/samd21b/iar/: system_samd21e15b.c  system_samd21e16bu.c  system_samd21g16b.c  system_samd21j16b.c
samd21-core/samd21b/include/: component-version.h  samd21e15bu.h  samd21e16b.h  samd21e16bu.h  samd21g16b.h  samd21j15b.h  system_samd21e15b.h  system_samd21e15bu.h  system_samd21e16b.h  system_samd21e16bu.h  system_samd21g16b.h  system_samd21j15b.h  system_samd21j16b.h
samd21-core/samd21b/svd/: ATSAMD21E15B.svd  ATSAMD21E16B.svd  ATSAMD21E16BU.svd
samd21-core/samd21c/armcc/: system_samd21e15cu.c  system_samd21e16cu.c
samd21-core/samd21c/edc/: ATSAMD21E15CU.PIC
samd21-core/samd21c/gcc/: system_samd21e15cu.c
samd21-core/samd21c/include/: component-version.h  sam.h  samd21e15cu.h  system_samd21e15cu.h  system_samd21e16cu.h
samd21-core/samd21d/armcc/: system_samd21e17d.c  system_samd21e17du.c
samd21-core/samd21d/atdf/: ATSAMD21E17D.atdf  ATSAMD21E17DU.atdf  ATSAMD21J17D.atdf
samd21-core/samd21d/edc/: ATSAMD21E17D.PIC
samd21-core/samd21d/gcc/: system_samd21g17d.c
samd21-core/samd21d/include/: component-version.h  sam.h  samd21e17d.h  samd21e17du.h  samd21j17d.h  system_samd21e17du.h  system_samd21j17d.h
samd21-core/samd21d/svd/: ATSAMD21E17D.svd  ATSAMD21G17D.svd
samd21-core/samd21d/templates/: main.c
samd21-core/samd21l/armcc/: system_samd21e15l.c  system_samd21e16l.c  system_samd21g15l.c  system_samd21g16l.c  system_samd21g17l.c
samd21-core/samd21l/atdf/: ATSAMD21E15L.atdf  ATSAMD21E16L.atdf  ATSAMD21G15L.atdf  ATSAMD21G16L.atdf
samd21-core/samd21l/edc/: ATSAMD21E15L.PIC  ATSAMD21G17L.PIC
samd21-core/samd21l/gcc/: system_samd21e15l.c  system_samd21g17l.c
samd21-core/samd21l/iar/: system_samd21e16l.c  system_samd21g16l.c
samd21-core/samd21l/include/: samd21e15l.h  samd21e16l.h  samd21e17l.h  samd21g15l.h  samd21g16l.h  samd21g17l.h  system_samd21e15l.h  system_samd21e16l.h  system_samd21g15l.h  system_samd21g16l.h  system_samd21g17l.h
samd21-core/samd21l/svd/: ATSAMD21E15L.svd  ATSAMD21E16L.svd  ATSAMD21G15L.svd  ATSAMD21G16L.svd  ATSAMD21G17L.svd
samd21-core/scripts/: j-link_cortex-m0plus.py
samd21a/armcc/: system_samd21e18a.c  system_samd21j16a.c  system_samd21j17a.c  system_samd21j18a.c
samd21a/armcc/armcc/: samd21e15a_flash.sct  samd21e17a_flash.sct  samd21g16a_flash.sct  samd21g17a_flash.sct  samd21j16a_flash.sct  startup_samd21g16a.c  startup_samd21g17au.c  startup_samd21g18a.c  startup_samd21j15a.c
samd21a/atdf/: ATSAMD21E15A.atdf  ATSAMD21E16A.atdf  ATSAMD21E18A.atdf  ATSAMD21G18A.atdf
samd21a/edc/: ATSAMD21E15A.PIC  ATSAMD21E17A.PIC  ATSAMD21G16A.PIC  ATSAMD21G18AU.PIC  ATSAMD21J15A.PIC  ATSAMD21J16A.PIC
samd21a/gcc/: system_samd21g17au.c  system_samd21g18a.c
samd21a/gcc/gcc/: samd21g16a_flash.ld  samd21g17a_flash.ld  samd21g18a_flash.ld  samd21g18au_sram.ld  samd21j16a_sram.ld  startup_samd21g16a.c  startup_samd21j18a.c
samd21a/iar/: system_samd21e17a.c  system_samd21g17a.c
samd21a/iar/iar/: startup_samd21e17a.c  startup_samd21g15a.c  startup_samd21g18au.c  startup_samd21j17a.c
samd21a/include/: component-version.h  samd21e15a.h  samd21g18a.h  samd21j17a.h  samd21j18a.h  system_samd21e15a.h  system_samd21g15a.h  system_samd21g17a.h  system_samd21j17a.h  system_samd21j18a.h
samd21a/include/component/: eic.h  mtb.h  rtc.h  sercom.h  tc.h  wdt.h
samd21a/svd/: ATSAMD21E15A.svd  ATSAMD21G17A.svd  ATSAMD21G18AU.svd  ATSAMD21J17A.svd  ATSAMD21J18A.svd
samd21a/templates/: library.cpp
src/: main.c  startup_samd21e17a.c
vendor-header-files/: README.md
(+947 files in other folders)
